src/Expr_arithmParser.java
// Generated from C:/Users/TRIUMPHAL/IdeaProjects/PROJET_COMPIL_WS\Expr_arithm.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Expr_arithmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, Modificateur=12, ID_Class=13, ID=14, WS=15, RL=16, 
		Speciaux=17, Comments=18, Comment=19, Cst=20, Par_Ouv=21, Par_Fer=22, 
		Affect=23, Plus=24, Sous=25, Mul_div_mod=26, Pv=27, Ac_fer=28, TYPE=29, 
		Cst_reel=30, SIGN=31, Neg=32, ET=33, OU=34, Comparateur=35, Guillemet=36, 
		Signe_formatage=37;
	public static final int
		RULE_r = 0, RULE_import_bib = 1, RULE_import_bib_lang = 2, RULE_import_bib_io = 3, 
		RULE_modificat = 4, RULE_dec = 5, RULE_ens_var = 6, RULE_inst = 7, RULE_inst_lecture = 8, 
		RULE_suite_lecture = 9, RULE_quad_read = 10, RULE_rout_signe_formatage_lecture = 11, 
		RULE_inst_ecriture = 12, RULE_suite_ecriture = 13, RULE_suite_ecriture_suite = 14, 
		RULE_rout_signe_formatage_ecrit = 15, RULE_quad_write = 16, RULE_debut_chaine = 17, 
		RULE_inst_af = 18, RULE_exp = 19, RULE_exp_s_m = 20, RULE_exp_d_m = 21, 
		RULE_rout_som_sous = 22, RULE_routine_div = 23, RULE_exp_par = 24, RULE_m_d = 25, 
		RULE_chaine = 26, RULE_inst_if = 27, RULE_rout_sinon = 28, RULE_rout_condition_if = 29, 
		RULE_inst_sinon = 30, RULE_rout_if_br = 31, RULE_rout_fin_sinon = 32, 
		RULE_pas_sinon = 33, RULE_condition = 34, RULE_condition_ou = 35, RULE_condition_et = 36, 
		RULE_condition_neg = 37, RULE_condition_comparateur = 38, RULE_condition_exp = 39, 
		RULE_ici = 40, RULE_neg = 41, RULE_non_neg = 42, RULE_ici_et = 43, RULE_derier_comp = 44, 
		RULE_non_cmp = 45, RULE_rout_cmp = 46, RULE_rout_ou = 47, RULE_rout_et = 48, 
		RULE_rout_vrai_ou = 49, RULE_rout_faux_ou = 50, RULE_rout_vrai_et = 51, 
		RULE_rout_faux_et = 52;
	private static String[] makeRuleNames() {
		return new String[] {
			"r", "import_bib", "import_bib_lang", "import_bib_io", "modificat", "dec", 
			"ens_var", "inst", "inst_lecture", "suite_lecture", "quad_read", "rout_signe_formatage_lecture", 
			"inst_ecriture", "suite_ecriture", "suite_ecriture_suite", "rout_signe_formatage_ecrit", 
			"quad_write", "debut_chaine", "inst_af", "exp", "exp_s_m", "exp_d_m", 
			"rout_som_sous", "routine_div", "exp_par", "m_d", "chaine", "inst_if", 
			"rout_sinon", "rout_condition_if", "inst_sinon", "rout_if_br", "rout_fin_sinon", 
			"pas_sinon", "condition", "condition_ou", "condition_et", "condition_neg", 
			"condition_comparateur", "condition_exp", "ici", "neg", "non_neg", "ici_et", 
			"derier_comp", "non_cmp", "rout_cmp", "rout_ou", "rout_et", "rout_vrai_ou", 
			"rout_faux_ou", "rout_vrai_et", "rout_faux_et"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'class_SJ'", "'{'", "'main_SJ'", "'import Small_Java.lang'", "'import Small_Java.io'", 
			"','", "'In_SJ'", "'Out_SJ'", "'Si'", "'Alors'", "'Sinon'", null, null, 
			null, null, null, null, null, null, null, "'('", "')'", "':='", "'+'", 
			"'-'", null, "';'", "'}'", null, null, null, "'!'", "'&'", "'|'", null, 
			"'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"Modificateur", "ID_Class", "ID", "WS", "RL", "Speciaux", "Comments", 
			"Comment", "Cst", "Par_Ouv", "Par_Fer", "Affect", "Plus", "Sous", "Mul_div_mod", 
			"Pv", "Ac_fer", "TYPE", "Cst_reel", "SIGN", "Neg", "ET", "OU", "Comparateur", 
			"Guillemet", "Signe_formatage"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Expr_arithm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Expr_arithmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RContext extends ParserRuleContext {
		public Import_bibContext import_bib() {
			return getRuleContext(Import_bibContext.class,0);
		}
		public ModificatContext modificat() {
			return getRuleContext(ModificatContext.class,0);
		}
		public TerminalNode ID_Class() { return getToken(Expr_arithmParser.ID_Class, 0); }
		public DecContext dec() {
			return getRuleContext(DecContext.class,0);
		}
		public InstContext inst() {
			return getRuleContext(InstContext.class,0);
		}
		public List<TerminalNode> Ac_fer() { return getTokens(Expr_arithmParser.Ac_fer); }
		public TerminalNode Ac_fer(int i) {
			return getToken(Expr_arithmParser.Ac_fer, i);
		}
		public RContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Expr_arithmListener ) ((Expr_arithmListener)listener).enterR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Expr_arithmListener ) ((Expr_arithmListener)listener).exitR(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Expr_arithmVisitor ) return ((Expr_arithmVisitor<? extends T>)visitor).visitR(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RContext r() throws RecognitionException {
		RContext _localctx = new RContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_r);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			import_bib();
			setState(107);
			modificat();
			setState(108);
			match(T__0);
			setState(109);
			match(ID_Class);
			setState(110);
			match(T__1);
			setState(111);
			dec();
			setState(112);
			match(T__2);
			setState(113);
			match(T__1);
			setState(114);
			inst();
			setState(115);
			match(Ac_fer);
			setState(116);
			match(Ac_fer);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_bibContext extends ParserRuleContext {
		public Import_bib_langContext import_bib_lang() {
			return getRuleContext(Import_bib_langContext.class,0);
		}
		public Import_bib_ioContext import_bib_io() {
			return getRuleContext(Import_bib_ioContext.class,0);
		}
		public Import_bibContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_bib; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Expr_arithmListener ) ((Expr_arithmListener)listener).enterImport_bib(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Expr_arithmListener ) ((Expr_arithmListener)listener).exitImport_bib(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Expr_arithmVisitor ) return ((Expr_arithmVisitor<? extends T>)visitor).visitImport_bib(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Import_bibContext import_bib() throws RecognitionException {
		Import_bibContext _localctx = new Import_bibContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_import_bib);
		try {
			setState(125);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				import_bib_lang();
				setState(119);
				import_bib_io();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(121);
				import_bib_io();
				setState(122);
				import_bib_lang();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_bib_langContext extends ParserRuleContext {
		public TerminalNode Pv() { return getToken(Expr_arithmParser.Pv, 0); }
		public Import_bib_langContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_bib_lang; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Expr_arithmListener ) ((Expr_arithmListener)listener).enterImport_bib_lang(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Expr_arithmListener ) ((Expr_arithmListener)listener).exitImport_bib_lang(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Expr_arithmVisitor ) return ((Expr_arithmVisitor<? extends T>)visitor).visitImport_bib_lang(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Import_bib_langContext import_bib_lang() throws RecognitionException {
		Import_bib_langContext _localctx = new Import_bib_langContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_import_bib_lang);
		try {
			setState(130);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(127);
				match(T__3);
				setState(128);
				match(Pv);
				}
				break;
			case T__0:
			case T__4:
			case Modificateur:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_bib_ioContext extends ParserRuleContext {
		public TerminalNode Pv() { return getToken(Expr_arithmParser.Pv, 0); }
		public Import_bib_ioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_bib_io; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Expr_arithmListener ) ((Expr_arithmListener)listener).enterImport_bib_io(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Expr_arithmListener ) ((Expr_arithmListener)listener).exitImport_bib_io(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Expr_arithmVisitor ) return ((Expr_arithmVisitor<? extends T>)visitor).visitImport_bib_io(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Import_bib_ioContext import_bib_io() throws RecognitionException {
		Import_bib_ioContext _localctx = new Import_bib_ioContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_import_bib_io);
		try {
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				match(T__4);
				setState(133);
				match(Pv);
				}
				break;
			case T__0:
			case T__3:
			case Modificateur:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModificatContext extends ParserRuleContext {
		public TerminalNode Modificateur() { return getToken(Expr_arithmParser.Modificateur, 0); }
		public ModificatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modificat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Expr_arithmListener ) ((Expr_arithmListener)listener).enterModificat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Expr_arithmListener ) ((Expr_arithmListener)listener).exitModificat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Expr_arithmVisitor ) return ((Expr_arithmVisitor<? extends T>)visitor).visitModificat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModificatContext modificat() throws RecognitionException {
		ModificatContext _localctx = new ModificatContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_modificat);
		try {
			setState(139);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Modificateur:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				match(Modificateur);
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(Expr_arithmParser.TYPE, 0); }
		public Ens_varContext ens_var() {
			return getRuleContext(Ens_varContext.class,0);
		}
		public DecContext dec() {
			return getRuleContext(DecContext.class,0);
		}
		public DecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Expr_arithmListener ) ((Expr_arithmListener)listener).enterDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Expr_arithmListener ) ((Expr_arithmListener)listener).exitDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Expr_arithmVisitor ) return ((Expr_arithmVisitor<? extends T>)visitor).visitDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecContext dec() throws RecognitionException {
		DecContext _localctx = new DecContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dec);
		try {
			setState(146);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(141);
				match(TYPE);
				setState(142);
				ens_var();
				setState(143);
				dec();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ens_varContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(Expr_arithmParser.ID, 0); }
		public TerminalNode Pv() { return getToken(Expr_arithmParser.Pv, 0); }
		public Ens_varContext ens_var() {
			return getRuleContext(Ens_varContext.class,0);
		}
		public Ens_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ens_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Expr_arithmListener ) ((Expr_arithmListener)listener).enterEns_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Expr_arithmListener ) ((Expr_arithmListener)listener).exitEns_var(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Expr_arithmVisitor ) return ((Expr_arithmVisitor<? extends T>)visitor).visitEns_var(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ens_varContext ens_var() throws RecognitionException {
		Ens_varContext _localctx = new Ens_varContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ens_var);
		try {
			setState(153);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(148);
				match(ID);
				setState(149);
				match(Pv);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(150);
				match(ID);
				setState(151);
				match(T__5);
				setState(152);
				ens_var();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstContext extends ParserRuleContext {
		public Inst_afContext inst_af() {
			return getRuleContext(Inst_afContext.class,0);
		}
		public InstContext inst() {
			return getRuleContext(InstContext.class,0);
		}
		public Inst_lectureContext inst_lecture() {
			return getRuleContext(Inst_lectureContext.class,0);
		}
		public Inst_ecritureContext inst_ecriture() {
			return getRuleContext(Inst_ecritureContext.class,0);
		}
		public Inst_ifContext inst_if() {
			return getRuleContext(Inst_ifContext.class,0);
		}
		public InstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inst; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Expr_arithmListener ) ((Expr_arithmListener)listener).enterInst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Expr_arithmListener ) ((Expr_arithmListener)listener).exitInst(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Expr_arithmVisitor ) return ((Expr_arithmVisitor<? extends T>)visitor).visitInst(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstContext inst() throws RecognitionException {
		InstContext _localctx = new InstContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_inst);
		try {
			setState(168);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(155);
				inst_af();
				setState(156);
				inst();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				setState(158);
				inst_lecture();
				setState(159);
				inst();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 3);
				{
				setState(161);
				inst_ecriture();
				setState(162);
				inst();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 4);
				{
				setState(164);
				inst_if();
				setState(165);
				inst();
				}
				break;
			case Ac_fer:
				enterOuterAlt(_localctx, 5);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Inst_lectureContext extends ParserRuleContext {
		public TerminalNode Par_Ouv() { return getToken(Expr_arithmParser.Par_Ouv, 0); }
		public TerminalNode Guillemet() { return getToken(Expr_arithmParser.Guillemet, 0); }
		public Rout_signe_formatage_lectureContext rout_signe_formatage_lecture() {
			return getRuleContext(Rout_signe_formatage_lectureContext.class,0);
		}
		public Suite_lectureContext suite_lecture() {
			return getRuleContext(Suite_lectureContext.class,0);
		}
		public Quad_readContext quad_read() {
			return getRuleContext(Quad_readContext.class,0);
		}
		public TerminalNode Par_Fer() { return getToken(Expr_arithmParser.Par_Fer, 0); }
		public TerminalNode Pv() { return getToken(Expr_arithmParser.Pv, 0); }
		public Inst_lectureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inst_lecture; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Expr_arithmListener ) ((Expr_arithmListener)listener).enterInst_lecture(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Expr_arithmListener ) ((Expr_arithmListener)listener).exitInst_lecture(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Expr_arithmVisitor ) return ((Expr_arithmVisitor<? extends T>)visitor).visitInst_lecture(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Inst_lectureContext inst_lecture() throws RecognitionException {
		Inst_lectureContext _localctx = new Inst_lectureContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_inst_lecture);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			match(T__6);
			setState(171);
			match(Par_Ouv);
			setState(172);
			match(Guillemet);
			setState(173);
			rout_signe_formatage_lecture();
			setState(174);
			suite_lecture();
			setState(175);
			match(T__5);
			setState(176);
			quad_read();
			setState(177);
			match(Par_Fer);
			setState(178);
			match(Pv);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Suite_lectureContext extends ParserRuleContext {
		public Rout_signe_formatage_lectureContext rout_signe_formatage_lecture() {
			return getRuleContext(Rout_signe_formatage_lectureContext.class,0);
		}
		public Suite_lectureContext suite_lecture() {
			return getRuleContext(Suite_lectureContext.class,0);
		}
		public Quad_readContext quad_read() {
			return getRuleContext(Quad_readContext.class,0);
		}
		public TerminalNode Guillemet() { return getToken(Expr_arithmParser.Guillemet, 0); }
		public Suite_lectureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_suite_lecture; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Expr_arithmListener ) ((Expr_arithmListener)listener).enterSuite_lecture(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Expr_arithmListener ) ((Expr_arithmListener)listener).exitSuite_lecture(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Expr_arithmVisitor ) return ((Expr_arithmVisitor<? extends T>)visitor).visitSuite_lecture(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Suite_lectureContext suite_lecture() throws RecognitionException {
		Suite_lectureContext _localctx = new Suite_lectureContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_suite_lecture);
		try {
			setState(186);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Signe_formatage:
				enterOuterAlt(_localctx, 1);
				{
				setState(180);
				rout_signe_formatage_lecture();
				setState(181);
				suite_lecture();
				setState(182);
				match(T__5);
				setState(183);
				quad_read();
				}
				break;
			case Guillemet:
				enterOuterAlt(_localctx, 2);
				{
				setState(185);
				match(Guillemet);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Quad_readContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(Expr_arithmParser.ID, 0); }
		public Quad_readContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quad_read; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Expr_arithmListener ) ((Expr_arithmListener)listener).enterQuad_read(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Expr_arithmListener ) ((Expr_arithmListener)listener).exitQuad_read(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Expr_arithmVisitor ) return ((Expr_arithmVisitor<? extends T>)visitor).visitQuad_read(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Quad_readContext quad_read() throws RecognitionException {
		Quad_readContext _localctx = new Quad_readContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_quad_read);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(188);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
